--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,9 +5,11 @@
     <uses-permission android:name="android.permission.CALL_PHONE" /> <!-- 电话权限 -->
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.GET_TASKS" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" /> <!-- 开机广播 -->
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <!-- 自定义权限 -->
     <permission
@@ -63,6 +65,11 @@
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" /> <!-- 指定要监听的广播 -->
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.MEDIA_MOUNTED" />
+                <action android:name="android.intent.action.MEDIA_UNMOUNTED" />
+                <action android:name="android.intent.action.MEDIA_EJECT" />
+            </intent-filter>
         </receiver>
 
         <service
@@ -71,7 +78,11 @@
             android:exported="true" />
         <service
             android:name=".service.InitGlobalDataService"
-            android:exported="false"></service>
+            android:exported="false" />
+        <service
+            android:name=".service.UService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
